<?xml version="1.0"?>
<package>
  <name>generalp</name>
  <version>0.0.0</version>

  <description>
  	General tools. Adapted from LOAM velodyne(Ji Zhang zhangji@cmu.edu)
  </description>

  <maintainer email="azaganidis@openmailbox.org">Anestis Zaganidis</maintainer>

  <license>BSD</license>

  <author email="azaganidis@openmailbox.org">Anestis Zaganidis</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rosbag</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
